Correct button style to use the correct class

--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,8 @@ input[type="number"] {
   position: relative;
 }
 
-.details-btn {
+.show-details,
+.hide-details {
   position: absolute;
   right: 5px;
   bottom: 5px;
