Added a Pie Chart to visualize the number of  events per genre

--- a/src/App.css
+++ b/src/App.css
@@ -121,6 +121,17 @@ input[type="number"] {
   z-index: 1000;
 }
 
+.charts-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+@media (max-width: 768px) {
+  .charts-container {
+    grid-template-columns: 1fr;
+  }
+}
+
 @media only screen and (max-width: 600px) {
   .event {
     padding-right: 20px;
