--- a/src/App.css
+++ b/src/App.css
@@ -132,6 +132,10 @@ input[type="number"] {
   margin: 0;
 }
 
+.chart-title {
+  margin: 0;
+}
+
 @media (max-width: 768px) {
   .charts-container {
     grid-template-columns: 1fr;
