--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,7 @@ input[type="number"] {
 
 .event {
   background-color: var(--event-color);
-  padding: 10px 200px 35px 20px;
+  padding: 10px 200px 60px 20px;
   margin-bottom: 20px;
   text-align: left;
   border-radius: 4px;
@@ -126,13 +126,14 @@ input[type="number"] {
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  margin-bottom: 50px;
+}
+
+.recharts-responsive-container {
+  margin-bottom: 50px;
 }
 
 .recharts-surface {
-  margin: 0;
-}
-
-.chart-title {
   margin: 0;
 }
 
